# HomeKey-ESP32

./: .clangd  .envrc  .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  extra_script.py  flake.nix  fs.py  no_ota.csv  platformio.ini  sdkconfig  sdkconfig.debug  sdkconfig.defaults  sdkconfig.ota  sdkconfig.release  sdkconfig.wemos_d1_mini32  sdkconfig.wemos_d1_mini32.old  with_ota.csv
.github/: FUNDING.yml  branch-switcher.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: esp32-c3.yml  esp32.yml  main.yml  no-response.yml  release.yml  wiki.yml
.zed/: settings.json
components/HomeSpan/: CMakeLists.txt
components/dns_server/: CMakeLists.txt  dns_server.c
components/dns_server/include/: dns_server.h
components/msgpack-c/: CMakeLists.txt
data/: .gitignore  .prettierignore  Frontend_function.md  actions.html  eslint.config.js  eslint.config.mjs  index.html  info.html  misc.html  mqtt.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
data/assets/: misc.css
data/routes/: actions.html  hkinfo.html  info.html  misc.html  mqtt.html
data/src/: App.svelte  App.vue  app.css  app.html  main.js  style.css  vite-env.d.ts
data/src/components/: AppActions.vue  AppMisc.vue  AppMqtt.vue  AppOTA.vue  HKInfo.vue  LogViewer.vue  WebSocketTest.vue
data/src/lib/components/: AppActions.svelte  AppMisc.svelte  AppMqtt.svelte  AppOTA.svelte  CertManager.svelte  HKInfo.svelte  HKInfo.test.js  HardwareConfig.svelte  HttpsCertManager.svelte  LogViewer.svelte  NavigationMenu.svelte  NavigationMenu.test.js  Notification.svelte  SpiEthernetNote.svelte  WebSocketTest.svelte
data/src/lib/services/: api.ts  ws.js
data/src/lib/stores/: loading.svelte.js  logs.svelte.ts  notifications.svelte.js  notifications.svelte.test.js  notifications.svelte.ts  system.svelte.js  system.svelte.test.js  system.svelte.ts  theme.svelte.js  theme.svelte.ts  ui.svelte.js  ui.svelte.test.js  websocket.svelte.js  websocket.svelte.test.js  websocket.svelte.ts
data/src/lib/types/: api.ts
data/src/lib/utils/: chipModel.ts  index.ts  objDiff.ts  type-guards.ts  wifi.ts
data/src/router/: index.js
data/src/routes/: +layout.svelte  +page.svelte  +page.ts  hooks.ts  index.svelte  layout.svelte  page.svelte.spec.ts
data/src/routes/actions/: +page.svelte  +page.ts  hooks.ts  index.svelte
data/src/routes/captive-portal/: hooks.ts  index.svelte  layout.svelte
data/src/routes/logs/: +page.ts  index.svelte
data/src/routes/misc/: +page.svelte  +page.ts  hooks.ts  index.svelte
data/src/routes/mqtt/: +page.svelte  +page.ts  hooks.ts  index.svelte
data/src/routes/ota/: +page.svelte
data/src/services/: api.js  ws.js
data/src/test/: setup.ts
docs/: configuration.md  go.mod  go.sum  hugo.yaml  index.md  mqtt.md  prerequisites.md  setup.md  updates.md
docs/content/: _index.md  automations.md  configuration.md  mqtt.md  prerequisites.md  setup.md  troubleshooting.md  updates.md
docs/content/API/: AppEventLoop.md  ConfigManager.md  HardwareManager.md  HomeKitLock.md  LockManager.md  MqttManager.md  NfcManager.md  ReaderDataManager.md  WebServerManager.md  _index.md
docs/layouts/_shortcodes/: gallery.html  img.html
main/: CMakeLists.txt  ConfigManager.cpp  ConfigManager_function.md  ConfigStructs.cpp  ConsoleLogSinker.cpp  HKServices.cpp  HardwareManager.cpp  HardwareManager_function.md  HomeKitLock.cpp  Kconfig.projbuild  LockManager.cpp  LockManager_function.md  MqttManager.cpp  MqttManager_function.md  NfcManager.cpp  NfcManager_function.md  ReaderDataManager.cpp  ReaderDataManager_function.md  WebServerManager.cpp  WebServerManager_function.md  WebSocketLogSinker.cpp  app_event_loop.cpp  app_events.cpp  idf_component.yml  logging.cpp  main.cpp
main/include/: ConfigManager.hpp  ConsoleLogSinker.h  HardwareManager.hpp  HomeKitLock.hpp  JsonGuard.hpp  LockManager.hpp  MbedtlsHelpers.hpp  MqttManager.hpp  NFC_SERV_CHARS.h  NFC_SERV_CHARS.hpp  NfcManager.hpp  ReaderDataManager.hpp  WebServerManager.hpp  WebSocketLogSinker.h  app_event_loop.hpp  app_events.hpp  config.h  config.hpp  defaults.h  eth_structs.hpp  eventStructs.hpp  logging.h  structs.hpp  utils.hpp
src/: CMakeLists.txt  DigitalKeySecureContext.cpp  HomeKey.h  cmac.c  cmd_register.cpp  config.h  console.cpp  console.h  idf_component.yml  main.cpp  ndef.cpp  ndef.h  x963kdf.cpp  x963kdf.h
src/auth/: authContext.cpp  authContext.h  hkAttestationAuth.cpp  hkAttestationAuth.h  hkAuthContext.cpp  hkAuthContext.h  hkFastAuth.cpp  hkFastAuth.h  hkStdAuth.cpp  hkStdAuth.h
src/util/: BERTLV.cpp  BERTLV.h  CommonCryptoUtils.cpp  CommonCryptoUtils.h  DigitalKeySecureContext.cpp  DigitalKeySecureContext.h  ISO18013SecureContext.cpp  ISO18013SecureContext.h  ndef.cpp  ndef.h  uart-appender.cpp  uart-appender.h  utils.cpp  utils.h  x963kdf.cpp  x963kdf.h
